--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         to visit Frontend Mentor and take your coding skills to the next level
       </h3>
 
+      <p class="prag">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
       </div>
     </div>
