change h1 and QR size

--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
       }
 
       .qr_code {
-        height: 300px;
-        width: 300px;
+        height: 350px;
+        width: 350px;
         border-radius: 5%;
-        margin-top: 20px;
       }
 
       .card {
@@ -78,8 +77,8 @@
       <img src="./images/image-qr-code.png" class="qr_code" alt="qr_code" />
 
       <h3 class="header">
-        Improve your front-end skills by building projects lore Scan the QR code
-        to visit Frontend Mentor and take your coding skills to the next level
+        Improve your front-end skills by building projects
+        
       </h3>
 
       <p class="prag">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
